# gloomberb

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLUGINS.md  README.md  README.zh-CN.md  electrobun.config.ts  install.mjs  install.sh  knip.json  package.json  paseo.json  日志.md
.github/workflows/: desktop-signing-check.yml  release.yml  verify-desktop-homebrew.yml  verify-windows.yml
npm/: install.mjs  package.json
patches/: @opentui%2Fcore@0.1.90.patch  @opentui%2Fcore@0.3.2.patch  electrobun@1.18.1.patch  react-reconciler@0.33.0.patch
scripts/: build-electrobun-view.ts  build-tauri-web.ts  build-windows-desktop-package.ps1  build-windows-installer.ps1  build.ts  bump-version.sh  electrobun-dev.ts  i18n-audit.ts  install-electrobun-tui-shim.ts  install.sh  release.sh  sync-version.ts  verify-windows-arm64.ps1  verify-windows-desktop.ps1  windows-installer.iss  write-homebrew-cask.ts
src/: app.tsx  cli.test.ts  cli.ts  index.tsx  pane-settings.test.ts  pane-settings.ts  updater.test.ts  updater.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api-client/: auth.ts  chat.ts  data.ts  index.test.ts  index.ts  normalizers.ts  paths.ts  request.test.ts  request.ts  socket.ts  types.ts
src/app/: app-bootstrap-state.test.ts  app-bootstrap-state.ts  broker-import-runtime.ts  desktop-menu-runtime.ts  global-shortcuts.test.tsx  global-shortcuts.ts  pane-template-dialog-wizard.test.tsx  pane-template-dialog-wizard.tsx  plugin-runtime-bindings.ts  update-runtime.ts  (+2 more)
(+2053 files in other folders)
