[package]
name = "gloomberb-tauri"
version = "0.5.1"
description = "Gloomberb desktop renderer prototype"
authors = ["Gloomberb"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
